
cc_library(
	name = "function_types",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_type_traits//:type_traits"
	],
)
